# rust-todos

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: Cargo.toml  Dockerfile
api/migrations/: 20231212071915_users.sql
api/schema/: schema.graphql
api/src/: context.rs  create_app.rs  dependency_injection.rs  domain.rs  infrastructure.rs  lib.rs  main.rs  schema.rs  use_case.rs
api/src/Gateway/: error.rs  user_repository.rs
api/src/domain/: error.rs  mod.rs
api/src/domain/entity/: common.rs  user.rs
api/src/domain/repository/: user_repository.rs
api/src/gateway/: user_repository.rs
api/src/graphql/resolver/: mod.rs  user_resolver.rs
api/src/infrastructure/: user_repository.rs
api/src/infrastructure/db/: postgres.rs
api/src/presentation/: graphql.rs  mod.rs
api/src/presentation/graphql/: object.rs  query.rs  schema.rs  user.rs
api/src/use_case/: error.rs  mod.rs
api/src/use_case/dto/: user.rs
api/src/use_case/interactor/: mod.rs  query.rs  user.rs
api/src/use_case/traits/: query.rs  user.rs
postgres/: postgresql.conf
