[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "6.0.11"
async-graphql-actix-web = "6.0.11"
actix-web = "4.4.0"
num = "0.4.1"
http = { version = "1.0.0", features = [] }