[package]
edition = "2021"
name = "api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-web = "4.4.0"
async-graphql = "6.0.11"
async-graphql-actix-web = "6.0.11"
http = { version = "1.0.0", features = [] }
num = "0.4.1"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres"] }
