[package]
edition = "2021"
name = "api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-web = "4.4.0"
async-trait = "0.1.68"
async-graphql = "6.0.11"
async-graphql-actix-web = "6.0.11"
http = { version = "1.0.0", features = [] }
num = "0.4.1"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres"] }
mockall = "0.12.0"
validator = { version = "0.16.1", features = ["derive"] }
thiserror = "1.0.50"
anyhow = { version = "1.0.75", features = ["backtrace"] }
env_logger = "0.10.1"
